# example

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  package.json  tsconfig.json
backend/: CMakeLists.txt
backend/resource/: Info.plist
backend/src/: cids.h  entry.cpp  version.h
backend/src/processor/: Processor.cpp  Processor.hpp
frontend/: package.json
frontend/src/: App.tsx  index.tsx
frontend/src/components/: Gain.tsx
public/: index.html  win32resource.rc
src/: entry.cpp  index.tsx  info.h  info.hpp
src/bridge/: State.ts  index.ts
src/components/: Gain.tsx
src/config/: parameters.d.ts  parameters.js  parameters.json  react-config.js
src/containers/: App.css  App.tsx
src/controller/: State.ts  index.ts
src/processor/: Processor.cpp  Processor.hpp  ProcessorState.ts
src/ui/: index.tsx
src/ui/components/: Gain.tsx
src/ui/containers/: App.tsx
